--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="poster">
       <!-- Video Element -->
-    <video id="video" muted autoplay loop>
+    <video class="video" muted autoplay loop>
       <source src="./assets/audio/stickbugged.mp4" type="video/mp4">
       Your browser does not support the video element.
     </video>
