--- a/index.html
+++ b/index.html
@@ -22,17 +22,13 @@
   </div>
 
   <script>
-    // Unmute the video when any interaction occurs (click, scroll, mousemove)
-    function unmuteVideo() {
+    document.body.addEventListener('click', function() {
       var video = document.getElementById('video');
-      video.muted = false; // Unmute the video
-    }
-  
-    // Add event listeners for various interactions
-    document.body.addEventListener('click', unmuteVideo);
-    document.body.addEventListener('scroll', unmuteVideo);
-    document.body.addEventListener('mousemove', unmuteVideo);
-    document.body.addEventListener('touchstart', unmuteVideo); // For touch events on mobile
+      if (video.muted) {
+        video.muted = false;  // Unmute the video
+        video.play();         // Play the video
+      }
+    });
   </script>
 </body>
 </html>
